<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="12dp"
    android:outlineSpotShadowColor="?attr/colorOnSecondary"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="?attr/colorPrimaryVariant"
    app:cardElevation="12dp"
    android:layout_marginBottom="12dp"
    android:id="@+id/card"
    tools:targetApi="p">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:cardCornerRadius="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_semibold"
            android:maxWidth="212dp"
            android:layout_marginStart="16dp"
            android:maxLines="1"
            android:text="@string/user_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <ImageView
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/more"
            android:src="@drawable/chevron_right"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>