<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_detail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:paddingTop="16dp">

                <ImageView
                    android:id="@+id/btn_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/box_arrow_up_right"
                    app:layout_constraintEnd_toEndOf="@+id/divider_top"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout2"
                    android:contentDescription="@string/open_on_github" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingHorizontal="24dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        tools:src="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_name"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:textSize="20sp"
                            android:textColor="?attr/colorOnPrimary"
                            android:visibility="gone"
                            tools:text="@string/name" />

                        <TextView
                            android:id="@+id/tv_username"
                            android:textAlignment="center"
                            android:fontFamily="@font/poppins_italic"
                            android:textSize="14sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-2dp"
                            tools:text="@string/user_name" />

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider_top">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_repositories"
                            android:textSize="18sp"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="?attr/colorOnPrimary"
                            android:textAlignment="center"
                            android:text="@string/n"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/repositories"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_gists"
                            android:textSize="18sp"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="?attr/colorOnPrimary"
                            android:textAlignment="center"
                            android:text="@string/n"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gists"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_followers"
                            android:textSize="18sp"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="?attr/colorOnPrimary"
                            android:textAlignment="center"
                            android:text="@string/n"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_following"
                            android:textSize="18sp"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="?attr/colorOnPrimary"
                            android:textAlignment="center"
                            android:text="@string/n"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/following"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_bot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp"
                    android:paddingBottom="24dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider_bot">

                    <TextView
                        android:id="@+id/tv_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:visibility="gone"
                        app:drawableStartCompat="@drawable/person_lines_fill"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider_2"
                        tools:text="@string/bio" />

                    <TextView
                        android:id="@+id/tv_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="8dp"
                        android:visibility="gone"
                        app:drawableStartCompat="@drawable/building_fill"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_bio"
                        tools:text="@string/company" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="8dp"
                        android:visibility="gone"
                        app:drawableStartCompat="@drawable/geo_fill"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_company"
                        tools:text="@string/location" />

                    <TextView
                        android:id="@+id/tv_blog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="8dp"
                        android:visibility="gone"
                        app:drawableStartCompat="@drawable/globe2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_location"
                        tools:text="@string/sites" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:layout_collapseMode="pin"
                app:titleTextColor="?attr/colorOnPrimary" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:background="?attr/colorPrimary"
            app:tabIndicatorColor="?attr/colorSecondary"
            android:overScrollMode="never"
            app:tabGravity="fill"
            app:tabTextColor="?attr/colorOnPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:translationY="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:tint="?attr/colorPrimary"
        android:layout_margin="24dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/heart" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>